<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Computations skills</string>
    <string name="btnNewGame">New Game</string>
    <string name="BtnAbout">About</string>
    <string name="studentId">Student Id </string>
    <string name="iitNumber">IIT number </string>
    <string name="name">Name </string>
    <string name="lblAbout">ABOUT</string>
    <string name="txtUowNumber">--</string>
    <string name="txtIItNumber">--</string>
    <string name="txtName">--</string>
    <string name="message">I confirm that I understand what plagiarism is and have read and understood the section on Assessment Offences in the Essential Information for Students. The work that I have submitted is entirely my own. Any work from other authors is duly referenced and acknowledged.
</string>
    <string name="btnGreater">Greater</string>
    <string name="btnEqual">==</string>
    <string name="btnLess">less</string>
    <string name="txtExpression2">--</string>
    <string name="txtExpression1">--</string>
    <string name="popupclose">X</string>
    <string name="lblName">Pramuditha Karunarathna</string>
    <string name="uow_number">UOW Number</string>
    <string name="uownumber">w1836048</string>
    <string name="iit_number">IIT Number</string>
    <string name="_20200612">20200612</string>
    <string name="timer">--</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="lblScore">Scoreboard</string>
    <string name="correct">Correct</string>>
    <string name="incorrect">Incorrect</string>
    <string name="appNAme">Check your Math</string>>

</resources>