<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350sp"
    android:layout_height="450sp"
    android:background= "@drawable/gredient_ackground3"
    android:layout_gravity="center">

<!--    <TextView-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:background="@drawable/circlebackground"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/popupclose"-->
<!--        android:textColor="@color/white"-->
<!--        android:textStyle="bold"-->
<!--        tools:ignore="MissingConstraints"-->
<!--        tools:layout_editor_absoluteX="318dp"-->
<!--        tools:layout_editor_absoluteY="-1dp" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/dp"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uow_number"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginEnd="15sp"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uownumber"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="15sp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iit_number"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginEnd="15sp"
                >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20200612"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                >
            </TextView>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="20sp">

        </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>