<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background= "@drawable/gredient_ackground1">

    <Button
        android:id="@+id/btnGreatrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="300dp"
        android:layout_weight="1"
        android:text="@string/btnGreater"
        android:background="@drawable/buttoncorners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="300dp"
        android:layout_weight="1"
        android:text="@string/btnLess"
        android:background="@drawable/buttoncorners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/btnEqual" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/btnEqual"
        android:background="@drawable/buttoncorners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtExpression2"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="400dp"
        android:gravity="center"
        android:text="@string/txtExpression2"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtExpression1"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginBottom="400dp"
        android:gravity="center"
        android:text="@string/txtExpression1"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        android:background="@drawable/resultlable"/>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:layout_marginTop="612dp"
        android:rotation="-21"
        android:rotationX="21"
        android:rotationY="33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/one" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="66dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:rotation="331"
        android:rotationX="33"
        android:rotationY="13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eight" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:rotation="17"
        android:rotationX="-50"
        android:rotationY="29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/five" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="58dp"
        android:layout_height="61dp"
        android:layout_marginBottom="104dp"
        android:rotation="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/two" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginTop="100dp"
        android:rotation="33"
        android:rotationX="-17"
        android:rotationY="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/three" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="51dp"
        android:layout_height="65dp"
        android:layout_marginBottom="204dp"
        android:rotation="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/seven" />

    <LinearLayout
        android:layout_width="247dp"
        android:layout_height="67dp"
        android:layout_marginTop="108dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@drawable/timer">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/timer"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="67dp"
        android:layout_height="72dp"
        android:layout_marginBottom="64dp"
        android:rotation="-33"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/four" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:layout_marginBottom="232dp"
        android:rotation="-46"
        android:rotationY="-21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nine" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="54dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:rotation="46"
        android:rotationY="17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/six" />


</androidx.constraintlayout.widget.ConstraintLayout>