<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gredient_ackground7"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="159dp"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="244dp"
        android:background="@drawable/homemenu"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/newGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/homebuttons"
            android:gravity="center"
            android:text="@string/btnNewGame"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/about"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:background="@drawable/homebuttons"
            android:text="@string/BtnAbout"
            android:translationY="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="126dp"
        android:layout_height="125dp"
        android:layout_marginTop="148dp"
        android:rotation="29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thinkmath" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="71dp"
        android:layout_height="73dp"
        android:layout_marginBottom="48dp"
        android:rotation="-54"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/calculator" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="69dp"
        android:layout_height="74dp"
        android:layout_marginBottom="124dp"
        android:rotation="-33"
        android:rotationX="-8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pi" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="73dp"
        android:layout_height="81dp"
        android:layout_marginTop="172dp"
        android:rotation="-42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/brain" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="99dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:rotation="-46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/joystick" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/appNAme"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>